# opencoverage

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: FireFlyTetracam.ini  RascalTetracam.ini  quad_tetracam.ini
examples/: sample_field.kml  sample_field.poly
src/opencoverage/: __init__.py  cli.py  mission_splitter.py  models.py  parameters.py  planner.py
src/opencoverage/geometry/: __init__.py  map.py  transforms.py
src/opencoverage/gpu/: __init__.py  _backend.py  optimal_sweep.py
src/opencoverage/io/: __init__.py  config.py  coords.py  kml.py  mission_planner.py  qgc.py  survey_input.py
src/opencoverage/patterns/: __init__.py  back_forth.py  base.py  following_wind.py  long_edge.py  optimal_sweep.py
tests/: test_back_forth.py  test_config.py  test_long_edge.py  test_mission_splitter.py  test_optimal_sweep.py  test_parameters.py  test_planner.py  test_survey_input.py
